Fix SonarLint issues flagged in IntelliJ
Closes #50